Correct gaps

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ aside,
 .main-header .profile {
   grid-area: profile;
   gap: 24px;
-  padding-right: 60px;
+  padding: 0 60px 0 16px;
 }
 
 .profile-pic {
@@ -134,6 +134,7 @@ aside,
   display: flex;
   align-items: center;
   padding-right: 50px;
+  gap: 16px;
 }
 
 .main-header .nav .user {
@@ -173,6 +174,7 @@ aside,
     "projects announcements"
     "projects trending";
   padding: 28px 16px;
+  gap: 16px;
 }
 
 .main-content .projects {
